# GetMyWeather

./: README.md
Golang/: go.mod  main.go
Rust/: Cargo.toml
Rust/src/: main.rs
